--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark border-bottom border-info">
 <div class="col col-md-4 text-center" style="padding-left: 22%;">
   <a class="navbar-brand" href="/">
-    <span id="logo-text">poe-ladder.com</span></a>
+    <span id="logo-text"><img class="logo" src="assets/images/logo.png">poe-ladder.com</span></a>
 </div>
 
 <!-- <div class="col col-md-4 text-center">
