--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,13 @@
 .image{
   background-size:cover; width:auto;
   background-image:url('./images/poe-ladder-background.jpg');
-  background-position: center;		background-repeat: repeat; height:100vh; width:100%;
+   width:100%;
   margin: 0;
-  min-height: 100%;
+  min-height: 100vh;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body {
