--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -41,7 +41,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let entry of hardcore">
+                      <tr *ngFor="let entry of softcore">
                         <td>{{ entry.rank }}</td>
                         <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                         <td>{{ entry.character }}</td>
@@ -132,7 +132,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let entry of hardcore">
+                    <tr *ngFor="let entry of softcoreSsf">
                       <td>{{ entry.rank }}</td>
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
@@ -178,11 +178,11 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let entry of hardcore">
+                    <tr *ngFor="let entry of hardcoreSsf">
                       <td>{{ entry.rank }}</td>
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
-                      <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                      <td ><img class="logo mx-auto" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                       <td>{{ entry.ascendancy }}</td>
                       <td>{{ entry.level}}</td>
                     </tr>
