--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -41,7 +41,7 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let entry of hardcore">
+                      <tr *ngFor="let entry of softcore">
                         <td>{{ entry.rank }}</td>
                         <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                         <td>{{ entry.character }}</td>
@@ -132,7 +132,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let entry of hardcore">
+                    <tr *ngFor="let entry of softcoreSsf">
                       <td>{{ entry.rank }}</td>
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
@@ -178,7 +178,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let entry of hardcore">
+                    <tr *ngFor="let entry of hardcoreSsf">
                       <td>{{ entry.rank }}</td>
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
@@ -192,7 +192,6 @@
         </div>
       </div>
     </div>
-
   </div>
 
 
