--- a/src/app/components/ladder-group-race/ladder-group-race.component.css
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.css
@@ -187,3 +187,11 @@ background-color: black!important;
 color: black!important;
 }
 
+.logo {
+  display:block;
+  margin:auto;
+  width: 37px;
+  height: 29px;
+}
+
+
