--- a/src/app/components/ladder-group-race/ladder-group-race.component.html
+++ b/src/app/components/ladder-group-race/ladder-group-race.component.html
@@ -182,7 +182,7 @@
                       <td>{{ entry.rank }}</td>
                       <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
                       <td>{{ entry.character }}</td>
-                      <td ><img class="logo mx-auto" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                      <td ><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
                       <td>{{ entry.ascendancy }}</td>
                       <td>{{ entry.level}}</td>
                     </tr>
