--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.css
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.css
@@ -187,3 +187,14 @@ background-color: black!important;
 color: black!important;
 }
 
+.accountColor {
+  color: #f1cd31;
+}
+
+.logo {
+  display:block;
+  margin:auto;
+  width: 37px;
+  height: 29px;
+}
+
