--- a/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
+++ b/src/app/components/ladder-group-uberlab/ladder-group-uberlab.component.html
@@ -170,7 +170,7 @@
               <thead>
                   <tr>
                       <th>#</th>
-                      <th>Account</th>
+                      <th class="">Account</th>
                       <th>Character</th>
                       <th></th>
                       <th>Asc</th>
