--- a/src/app/components/ladder-group-delve/ladder-group-delve.component.html
+++ b/src/app/components/ladder-group-delve/ladder-group-delve.component.html
@@ -1,74 +1,25 @@
 <div class="container-fluid">
-  <div class="row">
+    <div class="row">
+        <div class="col">
+          <div class="card" style="width:18%; margin:auto;">
+            <div class="card-header text-center" id="Top5LadderTitle">
+              Top #5 Delve Depths
+            </div>
+          </div>
+        </div>
+      </div>
+    <div class="row">
       <div class="col">
-        <div class="card" style="width:18%; margin:auto;">
-          <div class="card-header text-center" id="Top5LadderTitle">
-            Top #5 Delve Depths
-          </div>
-        </div>
-      </div>
-    </div>
-  <div class="row">
-    <div class="col">
-      <div class="card mx-auto">
-        <div class="card-header text-center">
-          <div class="row">
-            <div class="col"></div>
-            <div class="col-auto">
-              {{ softcore[0].league }}
-            </div>
-            <div class="col">
-              <button type="button" class="btn btn-primary btn-sm float-right"
-                (click)="onClick(softcore[0].league, softcore[0].leaderboard)">
-                Show Top 100
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
-          <div class="table-responsive">
-            <table class="table table-striped table-bordered table-sm row-border hover" datatable
-              [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th></th>
-                  <th>Account</th>
-                  <th>Character</th>
-                  <th></th>
-                  <th>Asc</th>
-                  <th>Depth</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let entry of softcore">
-                  <td>{{ entry.rank }}</td>
-                  <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
-                  <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
-                  <td *ngIf="entry.rankDifference == '0'"></td> 
-                  <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
-                  <td>{{ entry.character }}</td>
-                  <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
-                  <td>{{ entry.ascendancy }}</td>
-                  <td>{{ entry.depth }}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col">
         <div class="card mx-auto">
           <div class="card-header text-center">
             <div class="row">
               <div class="col"></div>
               <div class="col-auto">
-                {{ hardcore[0].league }}
+                {{ softcore[0].league }}
               </div>
               <div class="col">
                 <button type="button" class="btn btn-primary btn-sm float-right"
-                  (click)="onClick(hardcore[0].league, hardcore[0].leaderboard)">
+                  (click)="onClick(softcore[0].league, softcore[0].leaderboard)">
                   Show Top 100
                 </button>
               </div>
@@ -79,133 +30,183 @@
               <table class="table table-striped table-bordered table-sm row-border hover" datatable
                 [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
                 <thead>
-                  <tr>
-                    <th>#</th>
-                    <th></th>
-                    <th>Account</th>
-                    <th>Character</th>
-                    <th></th>
-                    <th>Asc</th>
-                    <th>Depth</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr *ngFor="let entry of hardcore">
-                    <td>{{ entry.rank }}</td>
-                    <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
-                    <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
-                    <td *ngIf="entry.rankDifference == '0'"></td> 
-                    <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
-                    <td>{{ entry.character }}</td>
-                    <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
-                    <td>{{ entry.ascendancy }}</td>
-                    <td>{{ entry.depth}}</td>
-                  </tr>
+                    <tr>
+                        <th>#</th>
+                        <th></th>
+                        <th>Account</th>
+                        <th>Character</th>
+                        <th></th>
+                        <th>Asc</th>
+                        <th>Depth</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr *ngFor="let entry of softcore">
+                        <td>{{ entry.rank }}</td>
+                        <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                        <td *ngIf="entry.rankDifference == '0'"></td> 
+                        <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                        <td>{{ entry.character }}</td>
+                        <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                        <td>{{ entry.ascendancy }}</td>
+                        <td>{{ entry.time}}</td>
+                      </tr>
                 </tbody>
               </table>
             </div>
           </div>
         </div>
       </div>
-      </div>
-<div class="row"></div>
-<div class="row">
-  <div class="col">
-    <div class="card mx-auto">
-      <div class="card-header text-center">
-        <div class="row">
-          <div class="col"></div>
-          <div class="col-auto">
-            {{ softcoreSsf[0].league }}
+      <div class="col">
+          <div class="card mx-auto">
+            <div class="card-header text-center">
+              <div class="row">
+                <div class="col"></div>
+                <div class="col-auto">
+                  {{ hardcore[0].league }}
+                </div>
+                <div class="col">
+                  <button type="button" class="btn btn-primary btn-sm float-right"
+                    (click)="onClick(hardcore[0].league, hardcore[0].leaderboard)">
+                    Show Top 100
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="card-body">
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered table-sm row-border hover" datatable
+                  [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                  <thead>
+                      <tr>
+                          <th>#</th>
+                          <th></th>
+                          <th>Account</th>
+                          <th>Character</th>
+                          <th></th>
+                          <th>Asc</th>
+                          <th>Depth</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let entry of hardcore">
+                          <td>{{ entry.rank }}</td>
+                          <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                          <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                          <td *ngIf="entry.rankDifference == '0'"></td> 
+                          <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                          <td>{{ entry.character }}</td>
+                          <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                          <td>{{ entry.ascendancy }}</td>
+                          <td>{{ entry.time}}</td>
+                        </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
-          <div class="col">
-            <button type="button" class="btn btn-primary btn-sm float-right" (click)="
-                  onClick(softcoreSsf[0].league, softcoreSsf[0].leaderboard)"> Show Top 100 </button>
+        </div>
+        </div>
+  <div class="row"></div>
+  <div class="row">
+    <div class="col">
+      <div class="card mx-auto">
+        <div class="card-header text-center">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col-auto">
+              {{ softcoreSsf[0].league }}
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary btn-sm float-right" (click)="
+                    onClick(softcoreSsf[0].league, softcoreSsf[0].leaderboard)"> Show Top 100 </button>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
+              [dtTrigger]="dtTrigger">
+              <thead>
+                  <tr>
+                      <th>#</th>
+                      <th></th>
+                      <th>Account</th>
+                      <th>Character</th>
+                      <th></th>
+                      <th>Asc</th>
+                      <th>Depth</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let entry of softcoreSsf">
+                      <td>{{ entry.rank }}</td>
+                      <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference == '0'"></td> 
+                      <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                      <td>{{ entry.character }}</td>
+                      <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                      <td>{{ entry.ascendancy }}</td>
+                      <td>{{ entry.time}}</td>
+                    </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
-            [dtTrigger]="dtTrigger">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th></th>
-                <th>Account</th>
-                <th>Character</th>
-                <th></th>
-                <th>Asc</th>
-                <th>Depth</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let entry of softcoreSsf">
-                <td>{{ entry.rank }}</td>
-                <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
-                <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
-                <td *ngIf="entry.rankDifference == '0'"></td> 
-                <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
-                <td>{{ entry.character }}</td>
-                <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
-                <td>{{ entry.ascendancy }}</td>
-                <td>{{ entry.depth }}</td>
-              </tr>
-            </tbody>
-          </table>
+    </div>
+    <div class="col">
+      <div class="card mx-auto">
+        <div class="card-header text-center">
+          <div class="row">
+            <div class="col"></div>
+            <div class="col-auto">
+              {{ hardcoreSsf[0].league }}
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-primary btn-sm float-right" (click)="
+                    onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)
+                  ">
+                Show Top 100
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="table-responsive">
+            <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
+              [dtTrigger]="dtTrigger">
+              <thead>
+                  <tr>
+                      <th>#</th>
+                      <th></th>
+                      <th class="">Account</th>
+                      <th>Character</th>
+                      <th></th>
+                      <th>Asc</th>
+                      <th>Depth</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let entry of hardcoreSsf">
+                      <td>{{ entry.rank }}</td>
+                      <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
+                      <td *ngIf="entry.rankDifference == '0'"></td> 
+                      <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
+                      <td>{{ entry.character }}</td>
+                      <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
+                      <td>{{ entry.ascendancy }}</td>
+                      <td>{{ entry.time}}</td>
+                    </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="col">
-    <div class="card mx-auto">
-      <div class="card-header text-center">
-        <div class="row">
-          <div class="col"></div>
-          <div class="col-auto">
-            {{ hardcoreSsf[0].league }}
-          </div>
-          <div class="col">
-            <button type="button" class="btn btn-primary btn-sm float-right" (click)="onClick(hardcoreSsf[0].league, hardcoreSsf[0].leaderboard)">
-              Show Top 100
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="card-body">
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered table-sm row-border hover" datatable [dtOptions]="dtOptions"
-            [dtTrigger]="dtTrigger">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th></th>
-                <th>Account</th>
-                <th>Character</th>
-                <th></th>
-                <th>Asc</th>
-                <th>Depth</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let entry of hardcoreSsf">
-                <td>{{ entry.rank }}</td>
-                <td *ngIf="entry.rankDifference.includes('-')"><span class='arrow-down'></span>&ensp;({{entry.rankDifference}})</td>
-                <td *ngIf="entry.rankDifference.includes('+')"><span class='arrow-up'></span>&ensp;({{entry.rankDifference}})</td>
-                <td *ngIf="entry.rankDifference == '0'"></td> 
-                <td><img class="online-icon" src="assets/images/{{entry.online}}.png">&nbsp; {{ entry.account }}</td>
-                <td>{{ entry.character }}</td>
-                <td><img class="logo" src="assets/ascendancy_images/{{entry.ascendancy}}.jpg"></td>
-                <td>{{ entry.ascendancy }}</td>
-                <td>{{ entry.depth }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
 
 
