--- a/src/app/components/top100leaderboard/top100leaderboard.component.html
+++ b/src/app/components/top100leaderboard/top100leaderboard.component.html
@@ -4,7 +4,7 @@
       </div>
       <div class="col">
             <div *ngIf="displayTable">
-              <div class="card mx-auto">
+              <div class="card">
                 <div class="card-header text-center">
                     <div class="row">
                         <div class="col">
